ajout de commentaires

--- a/virtual_ut/Main.storyboard
+++ b/virtual_ut/Main.storyboard
@@ -217,7 +217,7 @@
                         <barButtonItem key="leftBarButtonItem" title="Annuler" style="done" id="3NO-F4-wU7">
                             <color key="tintColor" red="0.00042700054759999998" green="0.38297723830000002" blue="0.70017408290000005" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <segue destination="eWM-HH-BwA" kind="unwind" unwindAction="unwindToConnexion:" id="Jsi-Yu-1Va"/>
+                                <segue destination="eWM-HH-BwA" kind="unwind" identifier="retourVersLogin" unwindAction="unwindToConnexion:" id="Jsi-Yu-1Va"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="done" id="y5D-kg-iN6">
@@ -384,7 +384,7 @@
             <objects>
                 <tableViewController id="R2A-ge-P7a" customClass="ListeTransactionsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" id="9N0-wK-a9E">
-                        <rect key="frame" x="0.0" y="44" width="320" height="524"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -470,11 +470,11 @@
                         <viewControllerLayoutGuide type="bottom" id="uA2-Vt-iFp"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="FvW-P5-CAs">
-                        <rect key="frame" x="0.0" y="44" width="320" height="524"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SC5-M0-SpF">
-                                <rect key="frame" x="-2" y="70" width="325" height="404"/>
+                                <rect key="frame" x="-2" y="114" width="325" height="404"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="prix" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nCd-nt-Rmj">
@@ -637,7 +637,7 @@
             <objects>
                 <tableViewController id="Gql-Mi-wKI" customClass="ListeAnnoncesController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="73" sectionHeaderHeight="22" sectionFooterHeight="22" id="w9s-IB-mlB">
-                        <rect key="frame" x="0.0" y="44" width="320" height="524"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -735,7 +735,7 @@
                         <viewControllerLayoutGuide type="bottom" id="2WX-9H-MoY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="eGM-bf-koS">
-                        <rect key="frame" x="0.0" y="44" width="320" height="524"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="dQHQNCnv ,VVDQ;H;Q ,S,B ,dbs ,,sqc, Bf?Qsbf, nESdw" translatesAutoresizingMaskIntoConstraints="NO" id="F4s-83-GRx">
@@ -865,7 +865,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="76" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="bam-nD-QKQ">
-                                <rect key="frame" x="23" y="236" width="268" height="130"/>
+                                <rect key="frame" x="23" y="236" width="268" height="174"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -958,7 +958,7 @@
                         <viewControllerLayoutGuide type="bottom" id="xj7-Xy-BJV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="UFI-4T-wOY">
-                        <rect key="frame" x="0.0" y="44" width="320" height="524"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.55000001192092896" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EGt-Od-Gwp">
@@ -1018,7 +1018,7 @@
                         <viewControllerLayoutGuide type="bottom" id="eCf-ws-lwa"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QjP-ne-GlY">
-                        <rect key="frame" x="0.0" y="44" width="320" height="524"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="prénom :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cx1-vd-cOU">
@@ -1162,7 +1162,7 @@
             <objects>
                 <tableViewController id="2BD-Ks-fOF" customClass="MonCompteRootViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="YwZ-iK-WPV">
-                        <rect key="frame" x="0.0" y="44" width="320" height="524"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
@@ -1498,8 +1498,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="wvd-Sk-QEK"/>
-        <segue reference="dLM-2i-Axe"/>
         <segue reference="vWL-nv-R9Y"/>
+        <segue reference="wvd-Sk-QEK"/>
+        <segue reference="jXZ-cn-Zer"/>
     </inferredMetricsTieBreakers>
 </document>
